# Webm-to-Gif

./: .gitignore  Cargo.toml  README.md  build.rs  resources.res  unified_converter.py
src/: decoder.rs  main.rs
src/decoder/: error.rs
